fixed bug where burger button not working on mobile

--- a/index.css
+++ b/index.css
@@ -166,6 +166,7 @@ ul {
     margin: 0 0 0 2em;
     display: flex;
     flex-direction: column;
+    z-index: 3;
 }
 
 .burger {
